# oneapi

./: .env.example  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
aggregator/: Dockerfile  logging_config.py  requirements.txt  worker.py
aggregator/providers/: base.py  copernicus.py  planetary_computer.py  umbra_canopy.py
aggregator/tests/: test_worker.py
client/: index.html
gateway/: API_TESTING.md  Dockerfile  debug_storage.py  example_usage.py  main.py  pytest.ini  requirements-test.txt  requirements.txt  settings.py
gateway/routes/: orders.py
gateway/services/: messaging.py  storage.py
gateway/tests/: conftest.py  test_health.py  test_storage_integration.py  test_tasks.py
notifications/: Dockerfile  notifier.py  requirements.txt
notifications/tests/: test_notifier.py
storage/: Dockerfile  app.py  db.py  main.py  models.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  settings.py
storage/migrations/: env.py
storage/migrations/versions/: c593d77094a7_init_schema.py
storage/routers/: events.py  order_providers.py  orders.py  providers.py
storage/tests/: conftest.py  test_events.py  test_health.py  test_order_providers.py  test_orders.py  test_providers.py
storage/tests/unit/: conftest.py
storage/tests/unit/routes/: test_events_http_unit.py
